client/layout/sidebar/style.scss
.sidebar {
	// Setting the position and clearing some
	// margins and paddings.
	margin: 0;
	padding: 0;

	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;

	display: flex;
	flex-direction: column;

	overflow: auto;

	// Not sure this is needed.
	@include breakpoint-deprecated( '<660px' ) {
		-webkit-overflow-scrolling: touch;
	}

	// Prevent elements from shrinking during
	// initial load in Safari. Unsure if still required?
	.current-site,
	.sidebar__footer,
	ul,
	li {
		flex-shrink: 0;
	}

	// Reset lists to avoid bullets and margins.
	ul {
		margin: 0;
	}

	li {
		list-style: none;
	}
}

// This button is hidden until focused. It allows screen-readers
// and other assistive technology to skip the sidebar.
.sidebar__skip-navigation {
	position: absolute;
	left: -10000px;
	flex-shrink: 0;

	&:focus {
		position: relative;
		left: auto;
	}
}

// Sidebar Headings, used for both static headings
// like in Reader, and for the expandable menus.
.sidebar__heading {
	color: var( --color-sidebar-text-alternative );
	font-size: 15px;
	font-weight: 600;
	padding: 16px 8px 6px 16px;
}

// Sidebar menu icons for main sections
.sidebar__menu-icon {
	fill: var( --color-sidebar-gridicon-fill );
	margin-right: 11px;
}

// Checklist progress
.sidebar__menu .myhome .sidebar__menu-link-text {
	max-width: calc( 100% - 80px );
	white-space: normal;
	padding-right: 8px;
}

.sidebar__checklist-progress {
	width: 80px;

	.sidebar__checklist-progress-text {
		font-size: 12px;
		margin: 0;
		white-space: normal;
		text-overflow: ellipsis;
		overflow: hidden;
	}

	.progress-bar {
		background-color: rgba( var( --color-sidebar-text-rgb ), 0.4 );
		height: 6px;

		.selected & {
			background-color: rgba( var( --color-sidebar-menu-selected-text-rgb ), 0.4 );
		}

		.progress-bar__progress {
			background-color: var( --color-sidebar-text );

			.selected & {
				background-color: var( --color-sidebar-menu-selected-text );
			}
		}
	}
}

// Menu links: The actual anchor tags that contain links to
// various sections of Calypso.
.sidebar__menu-link {
	font-size: 15px;
	line-height: 1;
	position: relative;
	padding: 10px 16px 10px 20px;
	box-sizing: border-box;
	white-space: nowrap;
	overflow: hidden;
	display: flex;
	align-items: center;

	&,
	&:visited {
		color: var( --color-sidebar-text );
	}

	// I think this is some voodoo to change the color
	// of a link when tapped on iOS.
	-webkit-tap-highlight-color: rgba( var( --color-neutral-700-rgb ), 0.2 );

	&:hover {
		background-color: var( --color-sidebar-menu-hover-background );
		color: var( --color-sidebar-menu-hover-text );

		.sidebar__menu-icon {
			fill: var( --color-sidebar-menu-hover-text );
		}

		.count {
			border-color: var( --color-sidebar-menu-hover-text );
		}
	}

	.count {
		margin-left: 8px;
		color: var( --color-sidebar-menu-hover-text );
		background-color: var( --color-sidebar-menu-hover-background );
		border-color: var( --color-sidebar-menu-hover-background );
	}

	.badge {
		margin: -7px 0 -8px;
	}

	.selected &,
	.selected &:hover {
		color: var( --color-sidebar-menu-selected-text );
		background-color: var( --color-sidebar-menu-selected-background );

		.sidebar__menu-icon {
			fill: var( --color-sidebar-menu-selected-text );
		}

		.count {
			background-color: transparent;
			border-color: var( --color-sidebar-menu-selected-text );
			color: var( --color-sidebar-menu-selected-text );
		}
	}

	// Some links are marked as "external" and show
	// an icon to visually indicate they will open
	// a new window/tab.
	.gridicons-external,
	&.external-link .gridicons-external {
		height: 16px;
		width: 16px;
		position: absolute;
		right: 21px;
		top: auto;
	}
}

.sidebar__menu-link-text {
	flex: auto;
}

.sidebar__menu-link-secondary-text {
	margin-right: 8px;
	align-self: center;
	font-weight: 600;
	font-size: 12px;
	position: absolute;
	right: 0;
	z-index: 1;
	color: var( --color-sidebar-text-alternative );
	padding: 4px 8px;

	.selected &,
	.sidebar__menu-link:hover & {
		color: inherit;
	}
}

// Expandables: Some sidebar menus act like accordions where
// you can hide and show the contained list.
.sidebar__menu.is-togglable {
	.sidebar__heading {
		display: flex;
		padding: 10px 16px 10px 20px;
		font-weight: 600;
		cursor: pointer;

		&:hover {
			background-color: var( --color-sidebar-menu-hover-background );
			color: var( --color-sidebar-menu-hover-text );

			.sidebar__menu-icon,
			.sidebar__expandable-arrow {
				fill: var( --color-sidebar-menu-hover-text );
			}
		}
	}

	.sidebar__expandable-title {
		flex: 1 1 0;
	}

	.sidebar__expandable-arrow {
		transition: transform 0.1s linear;
		fill: var( --color-sidebar-gridicon-fill );
	}

	.sidebar__menu-link {
		padding-left: 55px;
	}

	&.is-toggle-open {
		.sidebar__expandable-arrow {
			transform: rotate( 180deg );
		}
	}
}

.sidebar__bubble {
	border: solid 2px var( --color-sidebar-menu-hover-background );
	border-radius: 50%;
	display: none;
	font-size: 8px;
	height: 8px;
	letter-spacing: 0;
	line-height: 12px;
	margin: 0 0 0 15px;
	padding: 0;
	position: absolute;
	top: 9px;
	left: 0;
	width: 8px;
	z-index: z-index( '.masterbar', '.masterbar__notifications-bubble' );

	// Animation
	animation: bubble-unread-indication 0.5s linear both;
	transition: all 150ms ease-in;
}

li.has-unseen,
ul.has-unseen,
div.has-unseen {
	position: relative;
}

.has-unseen .sidebar__bubble {
	display: block;
	border-color: var( --color-sidebar-background );
	background: var( --color-sidebar-menu-hover-text );
}

.sidebar__menu li:hover .sidebar__bubble {
	display: block;
	border-color: var( --color-sidebar-menu-hover-background );
}

.sidebar__menu li.selected .sidebar__bubble {
	display: block;
	border-color: var( --color-sidebar-menu-selected-background );
}

// Sometimes we show info at the bottom of the sidebar. For
// example on My Site(s), for users with a single site, we
// show a button to add a new site.
.sidebar__wp-admin,
.sidebar__footer {
	margin-top: 16px;
}

